--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,21 @@ version: "3.9"
 services:
   db:
     image: postgres:16
+    # ... unchanged ...
+
+  backend:
+    build: ./backend
     environment:
-      POSTGRES_USER: app
-      POSTGRES_PASSWORD: app
-      POSTGRES_DB: app
+      PYTHONPATH: /code
+      DATABASE_URL: postgresql+psycopg://app:app@db:5432/app
+      SEED_ON_START: "true"
     ports:
-      - "5432:5432"
-    volumes:
-      - dbdata:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U app -d app"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
+      - "8000:8000"
+    depends_on:
+      db:
+        condition: service_healthy
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+
 
   backend:
     build: ./backend
