--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
-version: "3.9"
 services:
   db:
     image: postgres:16
-    # ... unchanged ...
+    # ...unchanged...
 
   backend:
     build: ./backend
+    working_dir: /code               # <— add this line
     environment:
-      PYTHONPATH: /code
+      PYTHONPATH: /code              # <— keep this
       DATABASE_URL: postgresql+psycopg://app:app@db:5432/app
       SEED_ON_START: "true"
     ports:
@@ -16,8 +16,3 @@ services:
       db:
         condition: service_healthy
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-
-
-
-volumes:
-  dbdata:
