--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,27 @@
 services:
   db:
     image: postgres:16
-    # ...unchanged...
+    environment:
+      POSTGRES_USER: app
+      POSTGRES_PASSWORD: app
+      POSTGRES_DB: app
+    ports:
+      - "5432:5432"
+    volumes:
+      - dbdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U app -d app"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
   backend:
-    build: ./backend
-    working_dir: /code               # <— add this line
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    working_dir: /code                 # ensure pytest runs from /code
     environment:
-      PYTHONPATH: /code              # <— keep this
+      PYTHONPATH: /code                # make /code importable -> 'import app'
       DATABASE_URL: postgresql+psycopg://app:app@db:5432/app
       SEED_ON_START: "true"
     ports:
@@ -16,3 +30,6 @@ services:
       db:
         condition: service_healthy
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+
+volumes:
+  dbdata:
